--- a/k8s/orderbook-deployment.yaml
+++ b/k8s/orderbook-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: orderbook
-          image: orderbook
+          image: rabinovich101/orderbook
           ports:
             - containerPort: 3010
