--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: client
+          image: rabinovich101/client
           ports:
             - containerPort: 3000
