--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -13,7 +13,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: test
-      run: echo "this is a test"
-      shell: bash
+    - name: code checkout
+      uses: actions/checkout@v2
+
+    - name: install google cli
+      uses: google-github-actions/setup-gcloud@v0
+      with:
+        project_id: ${{ secrets.GOOGLE_PROJECT }}
+        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        install_components: 'gke-gcloud-auth-plugin'
+        export_default_credentials: true
+
+    - name: deploy to gke
+      env:
+        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+      run: "gcloud components update kubectl \ngcloud config set project ${{ secrets.GOOGLE_PROJECT }}\ngcloud config set compute/zone us-central1-c\ngcloud container clusters get-credentials trading-k8s\nkubectl apply -f k8s\n"
