--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -1,30 +1,35 @@
-name: test workfolw
+name: deploy workfolw
 
 on:
   push:
     branches:
-    - main
+      - main
   pull_request:
     branches:
-    - main
+      - main
   workflow_dispatch:
 
 jobs:
-  test:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: code checkout
-      uses: actions/checkout@v2
+      - name: code checkout
+        uses: actions/checkout@v2
 
-    - name: install google cli
-      uses: google-github-actions/setup-gcloud@v0
-      with:
-        project_id: ${{ secrets.GOOGLE_PROJECT }}
-        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-        install_components: 'gke-gcloud-auth-plugin'
-        export_default_credentials: true
+      - name: install google cli
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: ${{ secrets.GOOGLE_PROJECT }}
+          service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          install_components: "gke-gcloud-auth-plugin"
+          export_default_credentials: true
 
-    - name: deploy to gke
-      env:
-        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-      run: "gcloud components update kubectl \ngcloud config set project ${{ secrets.GOOGLE_PROJECT }}\ngcloud config set compute/zone us-central1-c\ngcloud container clusters get-credentials trading-k8s\nkubectl apply -f k8s\n"
+      - name: deploy to gke
+        env:
+          GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+        run: |
+          gcloud components update kubectl 
+          gcloud config set project ${{ secrets.GOOGLE_PROJECT }}
+          gcloud config set compute/zone us-central1-c
+          gcloud container clusters get-credentials trading-k8s
+          kubectl apply -f k8s
